Docker configs update

--- a/docker/.env
+++ b/docker/.env
@@ -1,7 +1,15 @@
 COMPOSE_PROJECT_NAME=data_db
 MONGO_ROOT_USER=devroot
 MONGO_ROOT_PASSWORD=devroot
+
 MONGO_PORT=62017
 MONGOEXPRESS_LOGIN=dev
 MONGOEXPRESS_PASSWORD=dev
 MONGOEXPRESS_PORT=42000
+
+API_PORT=8000
+API_SECRET=SECRET
+API_BASE_URL=http://localhost
+API_ADMIN_EMAIL=admin@admin.com
+API_ADMIN_PASSWORD=adminpassword
+API_UVICORN_PROCESSES=1
