--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,40 @@
 version: '3'
 services:
+  api:
+    image: data_db_api
+    build:
+      context: api
+    restart: always
+    environment:
+      MONGO_ROOT_USER: ${MONGO_ROOT_USER}
+      MONGO_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_HOST: "mongo"
+      MONGO_PORT: 27017
+      API_UVICORN_PROCESSES: ${API_UVICORN_PROCESSES}
+
+      API_PORT: ${API_PORT}
+      API_SECRET: ${API_SECRET}
+      API_DATA_DIR: ${API_DATA_DIR}
+      API_BASE_URL: ${API_BASE_URL}
+      API_ADMIN_EMAIL: ${API_ADMIN_EMAIL}
+      API_ADMIN_PASSWORD: ${API_ADMIN_PASSWORD}
+
+      WAIT_HOSTS: mongo:27017
+      WAIT_HOSTS_TIMEOUT: 300
+      WAIT_SLEEP_INTERVAL: 30
+      WAIT_HOST_CONNECT_TIMEOUT: 30
+    networks:
+      - mongo-compose-network
+    ports:
+      - ${API_PORT}:8000
+    volumes:
+      - ../:/root/data_db
+    depends_on:
+      - mongo
+    command: sh -c "/wait && supervisord -n"
+
   mongo:
-    image: mongo:4.0.14
+    image: mongo:4.4.2 #4.0.14
     restart: always
     environment:
       MONGO_DATA_DIR: /data/db
@@ -12,22 +45,22 @@ services:
     networks:
       - mongo-compose-network
     volumes:
-      - ../data/db:/data/db
+      - mongo/db:/data/db
     ports:
-      - "${MONGO_PORT}:27017"
+      - ${MONGO_PORT}:27017
     command: mongod --smallfiles --logpath=/dev/null
 
   mongo-express:
-    image: mongo-express:0.49
+    image: mongo-express:0.54  #0.49
     restart: always
     environment:
       ME_CONFIG_BASICAUTH_USERNAME: ${MONGOEXPRESS_LOGIN}
       ME_CONFIG_BASICAUTH_PASSWORD: ${MONGOEXPRESS_PASSWORD}
-      ME_CONFIG_MONGODB_PORT: "27017"
+      ME_CONFIG_MONGODB_PORT: 27017
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USER}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD}
     ports:
-      - "${MONGOEXPRESS_PORT}:8081"
+      - ${MONGOEXPRESS_PORT}:8081
     networks:
       - mongo-compose-network
     depends_on:
