--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     command: sh -c "/wait && supervisord -n"
 
   mongo:
-    image: mongo:4.4.2 #4.0.14
+    image: mongo:4.4.2
     restart: always
     environment:
       MONGO_DATA_DIR: /data/db
@@ -45,13 +45,13 @@ services:
     networks:
       - mongo-compose-network
     volumes:
-      - mongo/db:/data/db
+      - ./mongo/db:/data/db
     ports:
       - ${MONGO_PORT}:27017
-    command: mongod --smallfiles --logpath=/dev/null
+    command: mongod --logpath=/dev/null
 
   mongo-express:
-    image: mongo-express:0.54  #0.49
+    image: mongo-express:0.54
     restart: always
     environment:
       ME_CONFIG_BASICAUTH_USERNAME: ${MONGOEXPRESS_LOGIN}
